# guardfw

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  config.hpp.in  libguardfw.pc.in  sonar-project.properties  sonar-project.properties.in
.github/workflows/: build.yml
cmake-includes/: generic-library.cmake  generic-setup.cmake  generic-sonarqube.cmake  generic-tests.cmake
cmake-templates/: config.cppm.in  config.hpp.in  libguardfw.pc.in  obs-rpm.spec.in  project-config.cmake.in  project.cmake.in  sonar-project.properties.in
modules/: exceptions.cppm  file_descriptor.cppm  guardfw.cppm  traits.cppm  wrapper.cppm
modules/guards/: guard.cppm  guard_event.cppm  guard_file.cppm  guard_message.cppm  guard_signal.cppm  guard_timer.cppm
modules/wrappers/: wrapped_epoll.cppm  wrapped_eventfd.cppm  wrapped_fcntl.cppm  wrapped_io_uring.cppm  wrapped_ioctl.cppm  wrapped_mman.cppm  wrapped_mqueue.cppm  wrapped_resource.cppm  wrapped_signal.cppm  wrapped_signalfd.cppm  wrapped_socket.cppm  wrapped_stdio.cppm  wrapped_timerfd.cppm  wrapped_timerfd_constant.cppm  wrapped_unistd.cppm
openbuildservice/: obs-rpm.spec
src/: example.cpp  exceptions.cpp  guard.cpp  guard_event.cpp  guard_file.cpp  guard_message.cpp  guard_signal.cpp  guard_timer.cpp  guard_timer_constant.cpp
src/done/: exceptions.cpp  exceptions.hpp  file_descriptor.hpp  guard.cpp  guard.hpp  guard_event.cpp  guard_file.cpp  guard_file.hpp  guard_message.cpp  guard_signal.cpp  guard_timer.cpp  guard_timer.hpp  guard_timer_constant.cpp  test_version.cpp  traits.hpp  wrapped_ioctl.hpp  wrapped_mman.hpp  wrapped_signal.hpp  wrapped_stdio.hpp  wrapped_timerfd.hpp  wrapper.hpp
src/guardfw/: exceptions.hpp  file_descriptor.hpp  guard.hpp  guard_event.hpp  guard_file.hpp  guard_message.hpp  guard_signal.hpp  guard_timer.hpp  traits.hpp  version.hpp  wrapped_eventfd.hpp  wrapped_fcntl.hpp  wrapped_fnctl.hpp  wrapped_ioctl.hpp  wrapped_mman.hpp  wrapped_mqueue.hpp  wrapped_resource.hpp  wrapped_signal.hpp  wrapped_signalfd.hpp  wrapped_socket.hpp  wrapped_timerfd.hpp  wrapped_unistd.hpp  wrapper.hpp
src/tests/: test_context_posix.cpp  test_file.cpp  test_version.cpp  test_wrapper.cpp
tests/: test_config.cpp  test_file.cpp  test_wrapped_io_uring.cpp  test_wrapped_mman.cpp  test_wrapper.cpp
